Bug 154114 - Formatting active cell applies formatting to entire cell range with data (as if prior Ctrl +A selection remains active)
Summary: Formatting active cell applies formatting to entire cell range with data (as ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 155743 (view as bug list)
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2023-03-10 12:41 UTC by freeware
Modified: 2023-07-27 20:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bug154114-newprofile-newfile (1.38 MB, application/octet-stream)
2023-03-10 12:56 UTC, freeware
Details
bug154114-newprofile-newfile2 (1.24 MB, video/mp4)
2023-03-10 13:09 UTC, freeware
Details

Note You need to log in before you can comment on or make changes to this bug.
Description freeware 2023-03-10 12:41:12 UTC
Description:
Hi. I've never seen this happening.
I'm filing a bug because I can't fix this nor by resetting (deleting) appdata profile nor even by reinstalling the app.
And this is a MAJOR bug if it is one and not some function I randomly and unexpectedly activated.
Attatched a video showing the issue.
Cheers.

Steps to Reproduce:
1. Go to %appdata% and remove Libreoffice folder to reset the profile
2. Open Calc
3. Fill in multiple cells
4. Select all
5. Click align content to center
6. Select ANY single non empty cell
7. Click align content to left

Actual Results:
All cells alignment changes

Expected Results:
Only selected cells should change


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: pl
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 freeware 2023-03-10 12:56:24 UTC
Created attachment 185884 [details]
bug154114-newprofile-newfile

Removed the profile from %appdata%, opened new Calc windows, entered data
Comment 2 freeware 2023-03-10 13:09:28 UTC
Created attachment 185886 [details]
bug154114-newprofile-newfile2

Shorter capture for better understanding
Comment 3 freeware 2023-03-10 13:12:16 UTC
Apparently "Select all" command gets "stuck" but not "fully".
When the issue is present aligning single cell changes all of them, but not if you change the background color - that changes only the selected cells and "unstucks" the "select all" - see first video.

This is really really annoying.
Comment 4 ady 2023-03-10 14:46:29 UTC
I am able to replicate in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0484a9a3f5e2ecb678f6fb41bbb251529e89c00d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL threaded
Built 2023.03.07

But not in 7.4.5. The video shows LO 7.5.1.

Setting regression.

STR (keyboard shortcuts for English):

1. New Calc.
2. Introduce in A1, A2, A3 (respectively):
a
b
c

3. [CTRL]+[A]
4. [CTRL]+[E]
5. [CTRL]+[HOME]
6. [CTRL]+[R]  > note _all_ cells changing alignment, not just A1.
7. [CTRL]+[L]
8. [CTRL]+[END]
9. [CTRL]+[R]
10. [CTRL]+[L]
11. [CTRL]+[Z]  > this UNDO releases the "select all".
13. [CTRL]+[HOME]
14. [CTRL]+[E]  > only A1 changes alignment.

I can even add some content to other cells (in E8, wherever), but then, when changing the alignment multiple times to any cell, once again _all_ cells are changed.

I must add that for me, also the background color was applied to all 3 cells when only selecting one of the 3. Moreover, I was not able to apply the BC to other cells (some empty random cell), until I [CTRL]+[Z], which released the original selection.
Comment 5 ady 2023-03-10 15:05:42 UTC
(In reply to ady from comment #4)
> I can even add some content to other cells (in E8, wherever), but then, when
> changing the alignment multiple times to any cell, once again _all_ cells
> are changed.

To be clear, that quoted paragraph is _before_ releasing the selection with UNDO.

Also the following regarding the background color was before releasing the selection with UNDO.


> 
> I must add that for me, also the background color was applied to all 3 cells
> when only selecting one of the 3. Moreover, I was not able to apply the BC
> to other cells (some empty random cell), until I [CTRL]+[Z], which released
> the original selection.
Comment 6 Buovjaga 2023-03-10 15:10:49 UTC
Bibisected with linux-64-7.5 to ac859a4c6a7fce4efee9cdd45821a0c9e40e9e9a
tdf#147842 shrink selection to data area when applying to entire sheet
Comment 7 freeware 2023-03-27 12:56:04 UTC
I just want to reiterate that IMO Calc is UNUSABLE solely because of this very bug.

Today, once again, I forgot about this bug, fired up Calc to work on a sheet and "stupidly" clicked select all, did some formatting to the cells, then I selected a column and added data validation (DV) to create a drop down menu, then saved and closed.

Later I reopened the file and low and behold: every cell has the drop down menu, instead of only the selected column. 

But that's not the real reason why I'm ranting here. 

I thought I can easily fix this mess by selecting all and resetting data validation to allow for any value.
I've always done many times beforehand whenever I needed to correct or remove data validation options.

But guess what. Calc 7.5.2 instead of removing DV from all cells (just like it added it to all cells) it only removed the setting in the cells from the "content area" (you know, the rectangular area Calc "thinks" the data are stored, deaming everything else nonexistant apparently), but it has NOT removed DV from cells outside that area.

Meaning, the mess got even worse, because now I'm left with DV in every empty cell, which is just... too much.

It is possible though to remove it, by selecting all the EMPTY cells and resetting their data validation options.
To do this you "just" have to select every single empty cell in your sheet, and gues what, you can't just "select all" and deselect cells containing stuff, because once you "select all" Calc does NOT select ALL at all!

And to top it off, even if you somehow manage to do it and you know have no DV anywhere, once you clicked "select all" and then repeated adding DV to any cell, Calc adds it everywhere AGAIN.

This is such a major bug.

To wrap it up, I've noticed multiple bugs like this since version 7.3 I literally can't use LO any more. Versions 7.2.4 had its many problems but holy moly it was never that unstable.

I'm sticking with 7.2.4 until this is sorted out.
Comment 8 freeware 2023-04-01 09:49:56 UTC
sorry, I meant 7.2.7.2 (and specifically Calc). I've noticed something really bad happened after that and anything 7.3+ is so buggy and so unstaable, having so many new workflaw breaking issues like this one here, I can't use it anymore. this one just broke that proverbial camel's back in my case.
Comment 9 Buovjaga 2023-04-01 12:03:38 UTC
(In reply to freeware from comment #8)
> sorry, I meant 7.2.7.2 (and specifically Calc). I've noticed something
> really bad happened after that and anything 7.3+ is so buggy and so
> unstaable, having so many new workflaw breaking issues like this one here, I
> can't use it anymore. this one just broke that proverbial camel's back in my
> case.

They will all be investigated and fixed, if you report them.
Comment 10 freeware 2023-05-13 19:15:59 UTC
I definitely will, but only after this particular regression is eliminated, only then I can safely go back to using latest version of Calc and check if any other issues I've experienced before still exist, without risking loosing any more of my time and my mind.

As it is now, and I've just checked latest official release (7.5.3) yet again, this deal breaker still persists, therefore I consider this Calc version unusable and a "liability" to my workflow, unfortunately. I'm keeping 7.2.7.2 for now.

Thank you for your hard work, and cheers.
Comment 11 stragu 2023-05-17 09:17:40 UTC
Also reproduced in a recent master build, following the OP steps:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1349f140fcc49e5da78482ca3db09663ccdae0a9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

One doesn't even need to select a cell with data in step 6: even an empty cell from outside the already-formatted range will reproduce the bug (applying the direct formatting to the previous range, and not the cursor cell). On the other hand, if the cell outside the previous range contains newly entered data, the selection will expand to include it when applying direct formatting.

Workaround, as pointed out by Ady, is to do a Ctrl + Z to not have this "phantom selection" active anymore. Alternatively, change the direct formatting of a new selection range (even of a single cell).

Noel, any idea?
Comment 12 Noel Grandin 2023-05-17 09:48:05 UTC
fix is at https://gerrit.libreoffice.org/c/core/+/151873
Comment 13 Commit Notification 2023-05-17 12:49:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c38c6a12cc7e5c640d7dbc9f7374da3f5a0cc869

tdf#154114 Formatting active cell applies to entire cell range

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 stragu 2023-07-27 20:23:51 UTC
*** Bug 155743 has been marked as a duplicate of this bug. ***