tdf#154114 Formatting active cell applies to entire cell range

regression from
    commit ac859a4c6a7fce4efee9cdd45821a0c9e40e9e9a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Oct 17 16:36:23 2022 +0200
tdf#147842 shrink selection to data area when applying to entire
sheet

Change-Id: I6fd8504d3995878fc9aedd461c0f374695d1f48e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151873
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>